syntax = "proto3";

package resonance.gateway.v1;

import "gateway/v1/packet.proto";

option go_package = "github.com/ceyewan/resonance/api/gen/go/gateway/v1;gatewayv1";

// PushService 处理从 Logic 推送消息到网关的请求
service PushService {
  // PushMessage 将消息流式传输到网关以传递给用户 (双向流)
  // Logic 持续推送，Gateway 持续返回 Ack
  rpc PushMessage(stream PushMessageRequest) returns (stream PushMessageResponse);
}

message PushMessageRequest {
  repeated string to_usernames = 1; // 支持批量推送
  PushMessage     message      = 2;
}

message PushMessageResponse {
  int64           msg_id           = 1; // 对应消息ID
  string          error            = 2; // 错误信息
  repeated string failed_usernames = 3; // 推送失败的用户列表
}
